[package]
name = "bevy_mod_raycast"
version = "0.1.1"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Ray Casting for the Bevy Engine."
repository = "https://github.com/aevyrie/bevy_mod_raycast/"
keywords = ["gamedev", "graphics", "bevy", "3d", "raycast"]
categories = ["game-engines", "rendering"]

[dependencies]
#bevy = { version = "0.4", default-features = false, features = ["render"] }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "master", default-features = false, features = ["render"] }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "af6723156782b5579c90b4eac1fa49b1646dbaf5" } # commit on 2021-01-28

[[example]]
name = "mouse_picking"

